--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CapacityBay Demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+<link rel="stylesheet" href="style.css">
 </head>
 
-<body style="text-align: center;">
-  <nav style="padding-top:0; padding-bottom:0; padding-left:15%; padding-right:15%" class="navbar navbar-expand-lg bg-success">
+<body>
+  <nav class="navbar navbar-expand-lg bg-success first-nav">
     <div class="container-fluid">
-      <a style="background:white; color:green; padding:10px" class="navbar-brand capa" href="#"><h1>CapacityBay</h1></a>
-      <button class="navbar-toggler btn btn-outline-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand capa" href="#"><h1>CapacityBay</h1></a>
+      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav nav-fill w-100">
         <li class="nav-item">
-          <a style="color:white" class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">About</a>
         </li>
 
         <li class="nav-item">
-          <a style="color:white" class="nav-link" href="#">Work</a>
+          <a class="nav-link" href="#">Work</a>
         </li>
 
         <li class="nav-item">
-            <a style="color:white" class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
 
@@ -34,41 +36,42 @@
     </div>
   </nav>
 
-  <div style="text-align: center; background-image: url(Img/bg.png); padding: 200px;" class="container-fluid">
-    <h1 style="color: white;">Hey, I am Faculty Tosin Emmanuel aka Tosinuel</h1>
-    <h3 style="color: green;" class="display-6"><em>I am a web developer</em> </h3>
+  <div  class="container-fluid second-container">
+    <h1 class="h1">Hey, I am Faculty Tosin Emmanuel aka Tosinuel</h1>
+    <h3 class="display-6 h3"><em>I am a web developer</em> </h3>
   </div>
 
 
-<div style="background-color:#303841; color:white; margin-bottom: 0;" class="container-fluid">
+<div class="container-fluid last-container">
   <h1>Build your Future Now!!!</h1>
-  <p class="display-6" style="font-size:14px ;"><em>Contact us on the Platforms below</em>  </p>
+  <p class="display-6 second6"><em>Contact us on the Platforms below</em>  </p>
 
-  <a style="margin-right: 15px; text-decoration:none;" href="#" class="link-light">
+  <a href="#" class="link-light socials">
     <i class="fa-brands fa-facebook social"></i> Facebook 
   </a>
 
-  <a style="margin-right: 15px; text-decoration:none;" href="https://github.com/Tosinuel" class="link-light">
+  <a href="https://github.com/Tosinuel" class="link-light socials">
     <i class="fa-brands fa-github"></i> GitHub</li>
   </a>
 
-  <a style="margin-right: 15px; text-decoration:none;" href="#" class="link-light">
+  <a href="#" class="link-light socials">
     <i class="fa-brands fa-twitter"></i> Twitter    
   </a>
+
 <hr style="border: 0;">
 
-  <a  style="margin-right: 15px; text-decoration:none;" href="mailto:capacitybay@gmail.com" class="link-light">
+  <a href="mailto:capacitybay@gmail.com" class="link-light socials">
     <i class="fa-solid fa-at"></i> Send a mail
   </a>
 
-  <a  style="margin-right: 15px; text-decoration:none;" href="tel:+2348186177631" class="link-light">
+  <a href="tel:+2348186177631" class="link-light socials">
     <i class="fa-solid fa-mobile-screen"></i> Call me
   </a>
 
 
-  <hr style="border:2px solid rgb(10, 212, 10)"> 
+  <hr class="hr2">
 
-<div style="margin-left: 100px; margin-right: 100px;">
+<div class="footer-div">
   <footer>
     <div class="d-flex justify-content-between">
       <p>
